force-app/main/default/objects/Reservation__c/fields/DestinationFrom__c.field-meta.xml
<CustomField>
    <fullName>DestinationFrom__c</fullName>
    <label>DestinationFrom</label>
    <length>20</length>
    <type>Text</type>
</CustomField>