force-app/main/default/objects/Reservation__c/fields/DestinationTo__c.field-meta.xml
<CustomField>
    <fullName>DestinationTo__c</fullName>
    <label>Destination To</label>
    <length>20</length>
    <type>Text</type>
</CustomField>