force-app/main/default/objects/Reservation__c/fields/PassengerId__c.field-meta.xml
<CustomField>
    <fullName>PassengerId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>PassengerId</label>
    <referenceTo>Passenger__c</referenceTo>
    <relationshipLabel>Reservation</relationshipLabel>
    <relationshipName>Reservation</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>