force-app/main/default/objects/Reservation__c/fields/ReservationDate__c.field-meta.xml
<CustomField>
    <fullName>ReservationDate__c</fullName>
    <label>ReservationDate</label>
    <type>Date</type>
</CustomField>