force-app/main/default/objects/Reservation__c/fields/TrainId__c.field-meta.xml
<CustomField>
    <fullName>TrainId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>TrainId</label>
    <referenceTo>Train__c</referenceTo>
    <relationshipLabel>Reservation</relationshipLabel>
    <relationshipName>Reservation</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>